--- a/projects/amz-eg/css/cart_style.css
+++ b/projects/amz-eg/css/cart_style.css
@@ -10,8 +10,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #EAEDED;
-    background-color: var(--cart_bg);
+    background-color: var(--cart_bg, #EAEDED);
 
 }
 
