--- a/projects/amz-eg/css/item_style.css
+++ b/projects/amz-eg/css/item_style.css
@@ -5,7 +5,6 @@ main {
     padding-bottom: 10rem;
 }
 
-
 .main__main__wrapper {
     min-width: 100vw;
     display: flex;
@@ -22,7 +21,7 @@ main {
 
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 1.5rem;
     padding: 2rem 0.75rem;
 }
@@ -110,6 +109,17 @@ a {
     background-repeat: no-repeat;
 }
 
+/*1em = the font-size of its container*/
+.star-smaller {
+    display: inline-block;
+    height: 1em;
+    width: 4rem;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+ 
+}
+
 .stars-five {
     background-image: url(../img/stars-five.png);
 }
@@ -153,16 +163,32 @@ a {
 
 
 .content__item__header {
-
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
+
+.content__item__header--rating {
+    margin-left: auto;
+    display:inline-flex;
+    /* align-items: center; */
+    gap: 0.25rem;
+    font-size: 0.8rem;
+    font-weight: 300;
+}
 
 .content__item__header h1 {
     font-size: 1rem;
     color: var(--product-list-text);
     font-weight: 300;
+    width: 100%;
+    display: block;
 }
 
+.content__item__header a:first-child {
+    font-size: 0.9rem;
+}
 
 /*/////////////////////////////////*/
 
@@ -170,6 +196,8 @@ a {
     width: 100%;
     position: relative;
     display: flex;
+    max-width: 350px;
+    margin: 0 auto;
 }
 
 .content__item__image--container img {
@@ -373,7 +401,7 @@ a {
 
 
 
-.content__item__ordering,.content__item__ordering--form-container {
+.content__item__ordering, .content__item__ordering--form-container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -434,7 +462,7 @@ a {
 }
 
 .content__item__ordering--orange-button {
-    margin-top: 0.5rem;
+    /* margin-top: 0.5rem; */
 }
 
 .content__item__ordering--yellow-button, .content__item__ordering--orange-button {
@@ -444,6 +472,9 @@ a {
     border-radius: 100px;
     font-weight: 300;
     color: var(-sort-button-text);
+    max-width: 350px;
+    margin: 0 auto;
+
 }
 
 /*/////////////////////////////////*/
@@ -478,6 +509,9 @@ a {
     text-align: center;
     /* margin-top: 0.5rem; */
     font-weight: 300;
+    max-width: 350px;
+    margin: 0 auto;
+
 
 }
 
@@ -604,6 +638,7 @@ input[type="checkbox"] {
 .content__item__icons {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     font-size: 0.9rem;
 }
 
@@ -709,6 +744,10 @@ input[type="checkbox"] {
     width: 80%;
     margin: 0 auto;
     margin-bottom: 2rem;
+    max-width: 350px;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+
 }
 
 .content__item__manufacturer-notes--intro--image img {
@@ -723,6 +762,7 @@ input[type="checkbox"] {
     border-collapse:collapse;
     font-weight: 300;
     color: var(--sort-button-text);
+    width: 100%;
 }
 
 .content__item__manufacturer-notes--information-table table tr td {
@@ -931,4 +971,93 @@ input[type="checkbox"] {
 
 .content__item__nav {
     font-size: 1rem;
+}
+
+
+
+.item-header--desktop {
+    display: none;
+}
+
+
+
+
+
+@media screen and (min-width: 900px) {
+
+    .item-header--mobile {
+        display: none;
+    }
+
+    .item-header--desktop {
+        display: block;
+    }
+
+
+    .main__main__content {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap:0;
+    }
+
+    .desktop_1 {
+        width: 48vw;
+        height: 700px;
+        display: inline;
+        order: 1;
+    }
+
+    .desktop_2 {
+        width: 48vw;
+        height: 900px;
+        display: inline;
+        order: 2;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .desktop_2 > * {
+        width: 24vw;
+    }
+
+    .desktop_3 {
+        width: 100vw;
+        order: 3;
+
+    }
+
+    .desktop_4 {
+        width: 100vw;
+        display: block;
+        order: 0;
+    }
+
+
+
+    .item-header--desktop {
+        order: 0;
+    }
+
+    .content__item__pricing {
+        order: 2;
+    }
+
+    .content__item__icons {
+        order: 3;
+    }
+
+    .content__item__details-list {
+        order: 4;
+    }
+
+    .content__item__ordering--form-container {
+        order: 5;
+    }
+
+
+    .content__item__seller-options--container {
+        order: 6;
+    }
+
 }
